# uv-align-distribute

./: .appveyor.yml  .buildinfo  .gitignore  .gitmodules  .hgignore  .project  .pydevproject  .travis.yml  CHANGELOG  CONTRIBUTING.md  README.md  Readme.md  __init__.py  align_operations.py  bounding_box.py  copy_paste_uv.py  debug.py  distribution_operations.py  global_def.py  island.py  make_island.py  match_islands.py  operator_manager.py  profile.py  pyproject.toml  search.html  searchindex.js  snap_islands.py  templates.py  tests.py  ui.py  utils.py  uv_align_test.blend
.github/workflows/: python-app.yml
_modules/: index.html
_modules/uv_align_distribute/: geometry.html  island.html
_sources/api/: operator_manager.rst.txt
api/: geometry.html  operator_manager.html  utils.html
docs/: Makefile  make.bat
docs/source/: conf.py  guidelines.rst  index.rst
tests/: add-on_start.test.blend  test.py  test_template.py
tests/addon_loaded/: addon_loaded.test.blend  addon_loaded.test.py
tests/align_operations/: align_operations.profile.py  align_operations.test.blend  align_operations.test.py
tests/bounding_box/: bounding_box.test.blend  bounding_box.test.py
tests/distribution_h_operations/: distribution_h_operations.test.blend  distribution_h_operations.test.py
utils/: download_blender.py
uv_align_distribute/: __init__.py  align_operations.py  distribution_operations.py  geometry.py  global_def.py  install.py  island.py  make_islands.py  match_islands.py  operator_manager.py  pack_islands.py  rectangle.py  snap_islands.py  templates.py  ui.py  utils.py
(+401 files in other folders)
